--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "geojson-vt",
+  "name": "@jingsam/geojson-vt",
   "version": "3.1.1",
   "description": "Slice GeoJSON data into vector tiles efficiently",
   "homepage": "https://github.com/mapbox/geojson-vt",
